# openff-pympfit

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  psi.3723808.clean  pyproject.toml  tmp.py
.github/workflows/: ci.yaml
devtools/: README.md
devtools/conda-envs/: test_env_rdkit.yaml  test_env_rdkit_and_openeye.yaml
devtools/scripts/: create_conda_env.py
docs/: Makefile  api.rst  conf.py  getting_started.rst  index.rst  installation.rst  make.bat  requirements.yaml  user_guide.rst
docs/_static/: custom.css
docs/api/: gdma.rst  mpfit.rst  optimize.rst
docs/autosummary/: pympfit.gdma.rst  pympfit.mpfit.rst  pympfit.optimize.rst
docs/tutorials/: bayesian_virtual_sites.md  constrained_fitting.md  index.md  multi_molecule.md  quickstart.md
docs/user_guide/: theory.md
examples/: constrained_mpfit_minimal.py  gdma-charges.py
examples/tutorials/: bayesian_vsite_fitting.py  constrained_fitting.py  multi_constrained_fitting.py  quickstart.py  util.py
openff_pympfit/: __init__.py
openff_pympfit/gdma/: __init__.py  _gdma.py  psi4.py
openff_pympfit/gdma/storage/: _storage.py
openff_pympfit/mbis/: __init__.py  _mbis.py  psi4.py
openff_pympfit/mbis/storage/: __init__.py  db.py
openff_pympfit/mpfit/: __init__.py  _legacy.py  _legacy_constrained_jax.py  _mpfit.py  core.py  solvers.py
openff_pympfit/optimize/: __init__.py  _optimize.py
openff_pympfit/tests/: conftest.py  test_core.py  test_gdma.py  test_mbis.py  test_mpfit.py  test_openff_pympfit.py  test_optimize.py  test_solvers.py  test_storage.py  test_storage.txt
paper/: MIT_MoML.tex  paper.bib  paper.md  paper_example.md
paper/figures/: software_design.mmd
pympfit/: __init__.py  _annotations.py
pympfit/gdma/: __init__.py  _gdma.py  psi4.py
pympfit/gdma/storage/: __init__.py  _storage.py  db.py  exceptions.py
pympfit/mbis/: __init__.py  _mbis.py  evaluate_cartesian_multipoles.py  multipole_transform.py  psi4.py
pympfit/mbis/storage/: __init__.py  _storage.py  db.py
pympfit/mpfit/: __init__.py  _legacy_constrained.py  _mpfit.py  core.py  solvers.py  test_emim_esp.py
pympfit/optimize/: __init__.py  _optimize.py
pympfit/tests/: __init__.py  conftest.py  test_core.py  test_gdma.py  test_mbis.py  test_mpfit.py  test_optimize.py  test_pympfit.py  test_solvers.py  test_storage.py  test_storage.txt
pympfit/tests/data/esp/: acetaldehyde_conformer.npy  acetaldehyde_esp.npy  benzene_conformer.npy  benzene_esp.npy  bmim_conformer.npy  bmim_esp.npy  bmim_grid.npy  c6mim_conformer.npy  c6mim_esp.npy  c6mim_grid.npy  co2_conformer.npy  co2_esp.npy  emim_conformer.npy  emim_esp.npy  emim_grid.npy  formaldehyde_conformer.npy  formaldehyde_esp.npy  formic_acid_conformer.npy  formic_acid_esp.npy  methyl_fluoride_conformer.npy  methyl_fluoride_esp.npy  methylamine_conformer.npy  methylamine_esp.npy  mmim_conformer.npy  mmim_esp.npy  mmim_grid.npy  n4444_conformer.npy  n4444_esp.npy  n4444_grid.npy  p4444_conformer.npy  p4444_esp.npy  p4444_grid.npy  water_conformer.npy  water_esp.npy
pympfit/tests/data/gdma/: ionic_liquids.sqlite
